
 Bug fixes:

   - 

 Other changes:

   DBModel Core v34.

   - my_date_editable_set_entry_format(): renamed from my_date_editable_set_format (todo #1331).
   - my_date_editable_set_label_format(): renamed from my_date_editable_set_label (todo #1332).
   - myICollectionable: remove ofaHub dependancy (todo #1319).
   - myIDialog: review whole closing process (todo #1330).
   - my_iwindow_msg_dialog(): deprecated (todo #1333).
   - my_iwindow_set_close_allowed(): new function replacing is_destroy_allowed() method (todo #1287).
   - my_stamp_xxx() functions now accept a display format (todo #1318).
   - my_utils_file_is_readable_file(): renamed to my_utils_file_is_readable().
   - my_utils_uri_is_readable_file(): renamed to my_utils_uri_is_readable().
   - ofaBackupAssistant: new class.
   - ofa_dossier_collection_set_meta_from_editor(): deprecated function (todo #1267).
   - ofaDossierNew: makes use of ofaExerciceEditBin (todo #1334).
   - ofaDossierNewBin: deprecated class.
   - ofaDossierNewMini: deprecated class (todo #1329).
   - ofaDossierProps: new class.
   - ofa_idbconnect_backup(): renamed to ofa_idbconnect_backup_db().
   - ofa_idbconnect_restore(): renamed to ofa_idbconnect_restore_db().
   - ofaIDBEditor: deprecated interface (todo #1328).
   - ofaIDBSuperuser: new interface.
   - ofaExerciceEditBin: new class.
   - ofaExerciceNew: new class.
   - ofa_iproperties_is_valid(): renamed from ofa_iproperties_get_valid (todo #1303).
   - ofa_mysql_prefs_bin_is_valid(): renamed from ofa_mysql_prefs_bin_get_valid (todo #1302).
   - ofoExemeta: new class.

   + Add a prequisite on JSON-GLib library.
   + Add a prequisite on libarchive library.

-----------------------------------------------------------------------
 Version 0.64
 ============

 Released on 2017-01-09

 New features and improvements:

   - ofaDossierOpen: exercice is disabled if no dossier is selected (todo #1297).
   - ofaExportAssistant: have a message when output file is not set.

 Bug fixes:
